# DynamicTransformer

./: .gitignore  Dynamic_Transformers.ipynb  README.md  analyze_perplexity.py  data_module.py  dynamic_transformers.py  gpt2_router.py  model.py  pyproject.toml  requirements.txt  script.sh  skip_layers_eval.py  test_router.py  train_router.py  utils.py
configs/: skip_layer.yaml  skip_multiple.yaml  test_router.yaml  train_router.yaml
