[tool.poetry]
name = "dynamictransformers"
version = "0.1.0"
description = ""
authors = ["edenlum <edenlum@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1"
torch = "^2.4.1"
transformers = "^4.45.2"
datasets = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
